src/assets/css/guided.css
* {
  box-sizing: border-box;
}

.container {
  max-width: 400px;
  margin: 0 auto;
  margin-top: 20px;
  padding: 40px;
}

.hide {
  pointer-events: none;
  visibility: hidden;
  opacity: 0;
  transform: translateX(-20px);
  transition: visibility 0s 0.12s linear, opacity 0.12s ease-in,
    transform 0.12s ease-in-out;
}

.guided--container {
  overflow-y: auto;
  display: flex;
  justify-content: center;
  padding-right: 30px;
  flex-direction: column;
  align-items: center;
}

.guided--container > h2 {
  margin: 0px;
}

.guided--header {
  display: flex;
  justify-content: center;
  align-items: center;
  padding-right: 30px;
}

.guided--body {
  display: flex;
  justify-content: center;
  height: 100%;
  overflow-y: auto;
  padding-top: 10px;
  padding-right: 30px;
}

.guided--input-container {
  padding-top: 10px;
  padding-bottom: 10px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 100%;
  max-width: 900px;
}

.guided--input {
  width: 100%;
  height: 38px;
  border-radius: 4px;
  padding: 10px 12px;
  font-size: 16px;
  font-weight: normal;
  border: 1px solid var(--color-border);
  transition: border-color 150ms ease-in-out 0s;
  outline: none;
  color: rgb(33, 49, 60);
  background-color: rgb(255, 255, 255);
}

.guided--text-area {
  height: 5em;
}
.guided--input:hover {
  box-shadow: rgb(231 238 236) 0px 0px 0px 2px;
}
.guided--input:focus {
  outline: 0;
  box-shadow: var(--color-light-green) 0px 0px 0px 1px;
}

.guided--progression-tab-container {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  position: relative;
  margin-top: 10px;
  border-bottom: 5px solid #b80d49;
}
.guided--progression-tab-container:first-child {
  border-left: 1px solid var(--color-border);
}

.guided--progression-tab {
  position: relative;
  display: flex;
  flex-direction: row;
  flex: 1;
  justify-content: center;
  align-items: center;
  border-right: 1px solid var(--color-border);
}

.dot {
  height: 30px;
  width: 30px;
  margin: 5px;
  border-radius: 50%;
  border: 1px solid;
  display: flex;
  justify-content: center;
  align-items: center;
  font-weight: bold;
}
.guided--progression-tab-triangle {
  position: relative;
}

.guided--progression-tab-triangle::before {
  content: "";
  z-index: 1;
  background-color: white;
  width: 10px;
  height: 10px;
  border-top: 1px solid var(--color-border);
  border-right: 1px solid var(--color-border);
  transform: rotate(45deg);
  position: absolute;
  top: 50%;
  right: -6px;
  margin-top: -5px;
}
.selected-tab:before {
  background-color: whitesmoke;
}

.guided--progression-tab-content {
  display: flex;
  flex-direction: row;
  align-items: center;
  height: 50px;
  width: 100%;
  padding-left: 10px;
  padding-right: 10px;
}

.guided--progression-tab-labels {
  display: flex;
  flex-direction: column;
  margin-left: 7px;
  justify-content: flex-start;
}

.guided--progression-tab-label-main {
  margin: 0px;
  color: black;
  font-weight: 600;
  font-size: 14px !important;
}

.guided--progression-tab-label-sub {
  margin-top: 2px;
  color: #999;
  font-weight: 600;
  font-size: 12px !important;
}

.guided--progression-bar {
  display: flex;
  align-items: center;
  flex-direction: row;
  width: 100%;
}
.guided--subsection-progress-status {
  display: flex;
  flex: 1;
  background-color: #b80d49;
  height: 5px;
}
.guided--subsection-progress-status.complete {
  background-color: lightgreen;
}
.guided--subsection-progress-status.in-progress {
  background-color: yellow;
}
.guided--subsection-progress-status.not-started {
  background-color: lightgrey;
}

.selected-tab {
  background-color: whitesmoke;
}

.guided--splash {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

.guided--steps {
  margin-top: 25px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  margin-left: 30px;
}

.guided--question {
  padding-top: 12px;
  padding-bottom: 12px;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  width: 90%;
  max-width: 900px;
}

.guided--parent-tab {
  width: 100%;
  display: flex;
  flex-direction: column;
}

.guided--panel {
  width: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  margin-bottom: 10px;
}

.guided--container-permissions {
  width: 100%;
  display: flex;
  flex-direction: row;
  align-items: center;
}
.guided--container-data-display {
  display: flex;
  width: 90%;
  max-width: 900px;
  flex-direction: column;
  align-items: center;
  margin-top: 15px;
  height: auto;
  box-shadow: 0px 0px 10px #d5d5d5;
  padding: 15px 25px;
  border-radius: 5px;
}

.guided--flex-center {
  display: flex;
  flex-direction: column;
  justify-content: center;
}

.guided--container-dataset-info {
  width: 70%;
  display: flex;
  flex-direction: column;
  align-items: center;
}
.guided--card-dataset-info {
  width: 100%;
  display: flex;
  align-items: flex-start;
  justify-content: flex-start;
  margin: 5px 0px;
}
.guided--dataset-description-container {
  padding: 5px 8px;
  width: 30%;
  min-width: 135px;
  text-align: left;
}
.guided--dataset-description {
  margin: 0px 0px;
  color: #808080;
  font-size: 15px;
  text-align: right;
}
.guided--dataset-content-container {
  padding: 5px 8px;
  width: 70%;
  display: flex;
  flex-grow: 1;
  flex-direction: row;
  align-items: center;
}
.guided--dataset-content-container:hover {
  cursor: pointer;
  transform: translateY(-2px);
  background-color: whitesmoke;
  transition: all 0.75s ease;
}
.guided--dataset-content {
  margin: 0px 0px;
  color: var(--color);
  font-weight: 600;
  font-size: 15px;
  word-break: break-word;
  text-align: left;
  flex-grow: 1;
}

.guided--prompt-centered {
  display: flex;
  justify-content: center;
}

.guided--prompt-text {
  font-size: 17px;
  color: var(--color-bg-plum);
  text-align: center;
  font-weight: 700;
  margin-bottom: 7px;
}

.guided--prompt-continue {
  color: var(--color-light-green) !important;
  margin-top: 15px !important;
}

.guided--text-sub-step {
  display: block;
  font-size: 17px;
  color: rgba(0, 0, 0, 0.87);
  text-align: center;
  font-weight: 700;
  margin-top: 10px !important;
  margin-bottom: 15px;
}

.guided--text-info {
  display: block;
  font-size: 15px;
  color: var(--color-bg-plum) !important;
  text-align: center;
  font-weight: 700;
  margin-top: 9px !important;
  margin-bottom: 9px;
}

.guided--label-accordion-field {
  font-size: 14px;
  color: #090909;
  font-weight: 600;
  margin-top: 10px;
  margin-bottom: 10px;
}

.guided--progress-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.guided--card-container {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
}

.guided--datasets-container {
  margin-top: 5px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-evenly;
  align-items: center;
  width: 100%;
  padding: 0px 15px;
}
.guided--dataset-container {
  display: flex;
  flex-direction: row;
  align-items: center;
  width: 100%;
  padding-top: 5px;
  padding-bottom: 5px;
  border-top: 1px solid #e6e8eb;
  border-bottom: 1px solid #e6e8eb;
  padding-left: 7px;
  padding-right: 7px;
}

.guided--text-dataset-card {
  margin: 0px;
  color: black;
  font-weight: 600;
  font-size: 17px !important;
  margin-bottom: 2px;
}

.guided--text-dataset-card-sub {
  margin: 0px;
  color: #999;
  font-weight: 600;
  font-size: 12px !important;
}

.guided--dataset-card {
  width: 250px;
  border: none;
  border-radius: 5px;
  box-shadow: 0px 0px 10px #d5d5d5;
  margin: 5px;
  padding: 10px;
}
.guided--dataset-card-title {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 5px 10px;
}
.guided--container-dataset-card-center {
  display: flex;
  flex-direction: column;
  align-items: center;
}
.guided--dataset-card-body {
  display: flex;
  justify-content: space-around;
  flex-wrap: wrap;
  margin-top: 8px;
}
.guided--dataset-card-item {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 40%;
  margin: 7px 5px;
}

.grow {
  flex-grow: 1;
}

.guided--step {
  margin-left: 20px;
  display: inline-block;
}

.guided--step > p {
  margin-left: 5px;
  display: inline-block;
}

.guided--step > h4 {
  display: inline-block;
}

.guided--prompt {
  font-size: 17px !important;
  color: var(--color-bg-plum) !important;
  text-align: center;
  font-weight: 700 !important;
  margin-bottom: 8px !important;
  margin-top: 5px !important;
}

.guided--folder-organization-buttons-container {
  display: flex;
  justify-content: space-between;
  flex-direction: row;
  align-items: center;
}

.faded {
  opacity: 0.2;
}

.show {
  pointer-events: auto;
  visibility: visible;
  opacity: 1;
  z-index: 1000;
  transform: translateX(0);
  transition: visibility 0s 0s linear, opacity 0.36s ease-out,
    transform 0.36s ease-out;
}

.guided-section {
  /* display: none; */
  position: absolute;
  top: 100px;
  left: 0;
  right: 0;
  bottom: 0;
  padding-top: 40px;
  overflow-x: hidden;
  overflow-y: auto;
  margin-top: 1px;
  /* margin-left: -10px; */
}

.guided {
  display: none;
}

.guided.show {
  display: flex;
  flex-direction: column;
}
.container {
  position: relative;
  width: 50%;
}

.image {
  display: block;
  width: 100%;
  height: auto;
}

.overlay {
  position: absolute;
  bottom: 100%;
  left: 0;
  right: 0;
  background-color: #008cba;
  overflow: hidden;
  width: 100%;
  height: 0;
  transition: 0.5s ease;
}

.container:hover .overlay {
  bottom: 0;
  height: 100%;
}

.text {
  color: white;
  font-size: 20px;
  position: absolute;
  top: 50%;
  left: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  text-align: center;
}
.guided--folder-card-container {
  width: 600px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
  justify-content: space-between;
  align-items: center;
}

.guided--capsule-container {
  display: flex;
  justify-content: center;
  align-items: center;
  margin-top: 15px;
  margin-bottom: 25px;
}
.guided--capsule {
  height: 5px;
  width: 50px;
  margin-left: 5px;
  margin-right: 5px;
  background-color: var(--color-border);
  border: none;
  display: inline-block;
  cursor: pointer;
  border-radius: 16px;
}
.guided--capsule.active {
  background-color: var(--color-light-green);
}
.guided--form-label {
  width: 100%;
  margin: 0 0 0.28571429rem 0;
  color: black;
  font-weight: 700;
  font-size: 1.2em !important;
}
.guided--card-large {
  max-width: 180px !important;
  max-height: 180px !important;
}
.guided--footer {
  border-top: 1px solid var(--color-border);
  display: flex;
  align-items: center;
  justify-content: space-between;
  margin-right: 30px;
  padding-top: 15px;
  margin-bottom: 10px;
}

.guided--button-footer {
  width: 120px !important;
}

.guided--button {
  width: 100px !important;
  margin-top: 15px !important;
}

.guided--footer button:first-child {
  margin-left: 7%;
}

.guided--footer button:last-child {
  margin-right: 7%;
}

.guided--field {
  width: 600px;
  margin-top: 15px !important;
}

.guided--form {
  width: 600px !important;
}

.guided--accordion {
  margin: 25px 0px !important;
  width: 100% !important;
}

.guided--accordion-field-container {
  width: 100%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}

.guided--accordion-field {
  width: 100%;
  padding: 15px 6%;
  display: flex;
  justify-content: center;
  flex-direction: column;
}
.guided--accordion-field-container .guided--accordion-field:last-child {
  margin-bottom: 10px;
}

